# mgr-vanim

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
app/: CMakeLists.txt  main.cpp
cmake/: deps.cmake  tests.cmake
cmake/triplets/: x64-windows-static.cmake
lib/: CMakeLists.txt
lib/include/: vanim.hpp
lib/src/: vanim.cpp
lib/src/converter/: common.cpp  common.hpp  dvdb_compressor.cpp  dvdb_compressor.hpp  dvdb_converter.cpp  dvdb_converter.hpp  dvdb_converter_nvdb.cpp  dvdb_converter_nvdb.hpp  error_calculator.cpp  error_calculator.hpp  nvdb_compressor.cpp  nvdb_compressor.hpp  nvdb_converter.cpp  nvdb_converter.hpp  nvdb_diff.cpp  nvdb_diff.hpp
lib/src/dvdb/: common.cpp  common.hpp  compression.cpp  compression.hpp  coord_transform.cpp  coord_transform.hpp  dct.cpp  dct.hpp  dct_transform_tables.cpp  dct_transform_tables.hpp  derivative.cpp  derivative.hpp  diff.cpp  diff.hpp  dvdb_header.hpp  dvdb_rle.hpp  fma.cpp  fma.hpp  rotate.cpp  rotate.hpp  statistics.cpp  statistics.hpp  transform.cpp  transform.hpp  types.hpp
lib/src/gl/: buffer_indices.hpp  fence.cpp  fence.hpp  message_callback.cpp  message_callback.hpp  shader.cpp  shader.hpp  shader_storage.cpp  shader_storage.hpp  uniform_buffer.cpp  uniform_buffer.hpp  vertex_array.cpp  vertex_array.hpp  vertex_buffer.cpp  vertex_buffer.hpp
lib/src/objects/misc/: world_data.cpp  world_data.hpp
lib/src/objects/ui/: animation_controller.cpp  animation_controller.hpp  convert_nvdb_dvdb.cpp  convert_nvdb_dvdb.hpp  convert_vdb_nvdb.cpp  convert_vdb_nvdb.hpp  debug_window.cpp  debug_window.hpp  file_dialog.cpp  file_dialog.hpp  main_menu.cpp  main_menu.hpp  popup.cpp  popup.hpp
lib/src/objects/vdb/: diff_vdb_resource.cpp  diff_vdb_resource.hpp  nano_vdb_resource.cpp  nano_vdb_resource.hpp  volume_resource_base.cpp  volume_resource_base.hpp
lib/src/scene/: camera.cpp  camera.hpp  object.cpp  object.hpp  object_context.cpp  object_context.hpp  scene.cpp  scene.hpp  signal.hpp
lib/src/utils/: clear_sys_cache.cpp  clear_sys_cache.hpp  cpu_architecture.cpp  cpu_architecture.hpp  future_helpers.hpp  gl_resource_thread.cpp  gl_resource_thread.hpp  gpu_memcpy.cpp  gpu_memcpy.hpp  memory_counter.cpp  memory_counter.hpp  nvdb_mmap.cpp  nvdb_mmap.hpp  resource_path.cpp  resource_path.hpp  scope_guard.hpp  thread_pool.cpp  thread_pool.hpp  utf8_exception.hpp
lib/test/: dump.hpp  dvdb_benchmark_cases.cpp  dvdb_benchmark_cases.hpp  dvdb_benchmarks.cpp  dvdb_compression.cpp  dvdb_coord_transform.cpp  dvdb_dct.cpp  dvdb_dct_transform_tables.cpp  dvdb_derivative.cpp  dvdb_fma.cpp  dvdb_rotate.cpp  dvdb_statistics.cpp  dvdb_transform.cpp
res/glsl/: debug.frag  default.frag  default.vert  dust_hdda.frag  dust_rm.frag  pnanovdb_post.glsl  pnanovdb_pre.glsl
scripts/: format.sh
utils/: CMakeLists.txt  compare_trees.cpp  csv_to_graphs.cpp
